# eon

./: .coverage  .env.example  .gitignore  BATCH_FIX_PLAN.md  CLAUDE.md  CODEBASE_AUDIT.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEBUGGING_AND_FIXES.md  DETAILED_PLAN.md  FEATURE_AUDIT.md  FINAL_STATUS.md  FIXES_SUMMARY.md  FRONTEND_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE_3_TEST_RESULTS.md  PHASE_4_COMPLETION_SUMMARY.md  PROJECT_CONTINUATION_GUIDE.md  PROJECT_SHOWCASE.md  QUICK_START.md  QUICK_START_UI.md  RATE_LIMITING_FIX.md  README.md  REMAINING_QUICK_WINS.md  SESSION_COMPLETE.md  STREAMLIT_FIX.md  TESTING_COMPLETE.md  TESTING_REPORT.md  TEST_REPORT.md  TEST_RESULTS_SUMMARY.md  UI_QUICK_START.md  VALIDATION_COMPLETE.md  WORKFLOW_DESIGN.md  WORKFLOW_ENGINE_DESIGN.md  WORKFLOW_ENGINE_IMPLEMENTATION.md  WORKFLOW_TEST_RESULTS.md  all_companies_refined_04062026.csv  (+13 more)
.github/workflows/: ci.yml
.streamlit/: config.toml
custom_workflows/: __init__.py  asymmetric_options.py  asymmetric_options_modified.py  base.py  contrarian_hunter.py  cspp_v26_analyzer.py  moonshot_excellence_finder.py  moonshot_options_finder.py
custom_workflows/examples/: __init__.py  growth_analyzer.py  management_analyzer.py  moat_analyzer.py  moonshot_analyzer.py  option_analyzer.py  risk_analyzer.py
data/: fintel.db  fintel.db-shm  fintel.db-wal  fintel.db.corrupted  fintel_dump.sql  multi_analysis_export.csv  test_db_ops.db  test_fintel.db  test_service.db  test_streamlit.db
data/api_usage/: usage_6bca3f63b6a6b95c.json
docs/: CUSTOM_WORKFLOWS.md  FUTURE_IMPROVEMENTS.md  PROJECT_AUDIT.md  RATE_LIMITING_FIX.md  RESUME_PROJECT_DESCRIPTION.md  SESSION_STATE.md  quickstart.md  testing.md
eon/ai/: __init__.py  api_config.py  key_manager.py  rate_limiter.py  request_queue.py  usage_tracker.py
eon/ai/prompts/: perspectives.py
eon/ai/providers/: __init__.py  base.py  gemini.py
eon/analysis/: __init__.py  runner.py
eon/analysis/comparative/: __init__.py  benchmarking.py  (+1 more)
eon/cli/: __init__.py  analyze.py  batch.py  export.py  main.py  scan.py  utils.py  workflows.py
eon/core/: __init__.py  analysis_types.py  config.py  exceptions.py  logging.py  monitoring.py  notifications.py  result.py  utils.py
eon/data/: corpus.py
eon/processing/: parallel.py  progress.py
eon/ui/: README.md  __init__.py  session.py  theme.py
examples/: 01_basic_fundamental_analysis.py  02_excellent_company_analysis.py  03_random_company_analysis.py  04_contrarian_scanning.py  05_component_demo.py  README.md  basic_analysis.py  batch_processing.py  multi_perspective.py  test_all_models.py  test_final.py  test_modules.py  test_perspectives.py  test_success_factors.py  utils.py
experimental/: __init__.py  add_mcap.py  check_error_null_runs_cspp_to_csv.py  combine_csv_xlsx.py  combine_csv_xlsx_options.py  convert_to_pdf.py  export_any_analysis_to_csv.py  export_cspp_full.py  export_cspp_to_csv.py  export_multi_analysis_to_csv.py  export_options_analysis_to_csv.py  extract_russell_1000.py  get_10k_dates.py  make_all_pdfs.py  opt_print.py  paper_trading_tracker.py
experimental/backtester/: BACKTEST_REPORT.md  STRATEGY_REPORT.md  __init__.py  __main__.py  backtester.py  data_loader.py  exp_lib.py  experiments_abcd.py  experiments_efghij.py  metrics.py  monthly_seasonality.py  price_fetcher.py  report.py  run_backtest.py  run_independent.py  run_spread_backtest.py  signals.py
experimental/excellent_company_factors/: unified_factors.json
experimentation/: README.md  __init__.py  custom_analysis_template.py  example_usage.py  leadership_extractor.py  schemas.py  simple_leadership_extract.py
fintel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fintel/ai/: __init__.py  api_config.py  key_manager.py  rate_limiter.py  request_queue.py  usage_tracker.py
fintel/analysis/: __init__.py  runner.py
fintel/cli/: __init__.py  analyze.py  batch.py  export.py  main.py  scan.py  utils.py  workflows.py
fintel/core/: __init__.py  analysis_types.py  config.py  exceptions.py  formatting.py  interfaces.py  logging.py  monitoring.py  notifications.py
fintel/data/: corpus.py
fintel/processing/: parallel.py  progress.py
fintel/ui/: README.md  __init__.py  session.py  theme.py
fintel/workflows/: comparative.py
pages/: 10_📋_Templates.py  1_📊_Analysis.py  1_📊_Single_Analysis.py  2_📈_Analysis_History.py  2_📦_Batch_Analysis.py  3_📈_Analysis_History.py  3_🔍_Results_Viewer.py  4_⚙️_Settings.py  4_🌙_Batch_Queue.py  4_🔍_Results_Viewer.py  5_⚙️_Settings.py  5_🌙_Batch_Queue.py  5_📦_Batch_Analysis.py  5_🗄️_Database_Viewer.py  6_🗄️_Database_Viewer.py  7_📤_Export.py  8_🔗_Workflow_Builder.py  9_📊_Analytics.py  __init__.py
scripts/: convert_to_pdf.py  count_items.py  dedup_db.py  export_multi_analysis_to_csv.py  make_all_pdfs.py  test.json  test_phase2.py
src/fintel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  export_moonshot_to_csv.py  export_multi_analysis_to_csv.py  test_batch_queue.py  test_cached_analysis.py  test_comprehensive.py  test_file_cache.py  test_filing_types.py  test_final_validation.py  test_fixes.py  test_fresh_workflow.py  test_integration.py  test_new_features.py  test_nuclear_workflow.py  test_rate_limiting.py  test_sec_filings.py  test_ui_year_selection.py  test_workflows.py  test_workflows_comprehensive.py
tests/unit/: __init__.py
workflows/: chip_comparison_20251209_131800.json  goofy_ahh_20251208_144939.json  multiperspective_&_combine_20251207_163450.json  nuclear_20251209_131100.json  people_analyser_20251212_152257.json
(+177 files in other folders)
