[project]
name = "fintel"
version = "0.1.0"
description = "AI-powered SEC filing analysis platform for investment research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Private"}
authors = [
    {name = "Fintel Contributors"}
]
keywords = ["finance", "sec", "analysis", "ai", "investment", "10-K"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    # Data Processing
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "pyarrow>=13.0.0",

    # SEC Data
    "sec-edgar-downloader>=5.0.0",
    "PyPDF2>=3.0.0",

    # Web Automation
    "selenium>=4.0.0",

    # AI/LLM - Google GenAI SDK
    "google-genai>=0.1.0",

    # Validation & Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Market Data
    "yfinance>=0.2.0",

    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",

    # Configuration
    "python-dotenv>=1.0.0",

    # Database
    "sqlalchemy>=2.0.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",

    # Web UI
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
fintel = "fintel.cli.main:cli"

[project.urls]
Documentation = "https://github.com/gkgeo9/fintel#readme"
Issues = "https://github.com/gkgeo9/fintel/issues"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fintel", "custom_workflows"]

[tool.setuptools.package-data]
fintel = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "B905",   # zip strict
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__
"tests/*" = ["B011"]      # assert statements

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "^.venv/",
    "^build/",
    "^dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=fintel --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["fintel"]
omit = [
    "fintel/__init__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
